# biomarker-concordance-pipeline

./: .env.example  .gitignore  Dockerfile  README.md  main.nf  nextflow.config  pyproject.toml
.github/workflows/: ci.yml
analysis/: concordance.py  quality_monitor.py  reproducibility.py
api/: database.py  main.py  models.py  schemas.py
api/routers/: alerts.py  concordance.py  health.py  reproducibility.py  runs.py
assets/: samplesheet_test.csv
dashboard/: app.py
infrastructure/: batch.tf  ecr.tf  main.tf  rds.tf  s3.tf  vpc.tf
modules/local/bwa_mem2_index/: main.nf
modules/local/bwa_mem2_mem/: main.nf
modules/local/fastqc/: main.nf
modules/local/gatk_bqsr/: main.nf
modules/local/gatk_genotypegvcfs/: main.nf
modules/local/gatk_haplotypecaller/: main.nf
modules/local/gatk_markduplicates/: main.nf
modules/local/hapqy/: main.nf
modules/local/trimgalore/: main.nf
modules/local/vep/: main.nf
tests/: conftest.py  test_concordance.py  test_quality_monitor.py  test_reproducibility.py
workflows/: germline_variant_calling.nf
