[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biomarker-concordance-pipeline"
version = "1.0.0"
description = "Production Nextflow DSL2 germline variant calling pipeline with biomarker reproducibility analysis"
requires-python = ">=3.12"
dependencies = [
    "pysam>=0.24",
    "cyvcf2>=0.33",
    "pingouin>=0.6",
    "scipy>=1.17",
    "statsmodels>=0.14",
    "pandas>=2.2",
    "numpy>=1.26",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "fastapi>=0.111",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "streamlit>=1.35",
    "plotly>=5.22",
    "boto3>=1.34",
    "structlog>=24.0",
    "tenacity>=9.0",
    "httpx>=0.27",
    "uvicorn>=0.30",
    "requests>=2.31",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["analysis*", "api*", "dashboard*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["analysis", "api"]
omit = ["tests/*", "dashboard/*"]
